docs: fix youtube on iphone

--- a/docs/_sass/_landingPage.scss
+++ b/docs/_sass/_landingPage.scss
@@ -485,8 +485,18 @@ $learn-section-side-margin: 0 2rem;
 
 
       &--youtube {
+        border: 1px solid transparent;
+        border-radius: 8px;
+        display: flex;
+        justify-content: center;
         overflow: hidden;
-        border: none;
+
+        iframe {
+          -webkit-transform: scale(1.0);
+          -webkit-transform-origin: 0 0;
+          width: 100%;
+          height: 100%;
+        }
       }
     }
 
